--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -10,6 +10,14 @@ header .logo {
     height: 100%;
 }
 
+header div {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 30px;
+    background-color: #cccccc;
+}
+
 .available {
     background-color: #ff545f;
 }
